# mec-programs-assistant

./: .gitignore  Makefile  README.md  assistant.py  download.py  embeder.py  evaluate_retrieval.py  extract.py  faq_mec.db  index_docs.py  ingest.py  main.py  mec_faq.json  mec_faq_enriquecido.json  mec_faq_raw.json  mec_faq_scraper.py  metadata.csv  metrics.py  notebook.ipynb  pyproject.toml  rag_helper.py  retrieval.py  search.py  vector_search.ipynb
data/ground_truth/: batch1.json  batch2.json  batch4.json  batch6.json  batch8.json  ground3.json  ground5.json  ground7.json
data/raw/: dataset.json  dataset_part.json
src/: config.py  test_rag.py
src/embeddings/: embedder.py
src/evaluation/: merge_ground_truth.py
src/ingestion/: cleaner.py  indexer.py
src/rag/: retriever.py
