[project]
name = "mec-programs-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb[embeddings]>=1.5.9",
    "fastembed>=0.8.0",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "minsearch>=0.1.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

